Revert "fix: social media icon excess whitespace (#768)"
This reverts commit 97fea1befa81c7704e426a67faf21ba43b75742d.

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.css
@@ -71,17 +71,18 @@ Styleguide Components.DjangoCMS.Blog.App
 /* Metadata */
 
 /* To layout data */
+.app-blog .attrs,
 .app-blog .tags,
 .app-blog .categories {
   display: flex;
   flex-direction: row;
   gap: 1em;
 }
-
-
-/* To always hide byline prefix */
-.app-blog .byline > span {
-  display: none;
+.app-blog .attrs {
+  justify-content: space-between;
+}
+.app-blog .date {
+  order: -1
 }
 
 /* To conditionally hide tags & categories */
@@ -125,11 +126,7 @@ Styleguide Components.DjangoCMS.Blog.App
   display: flex;
   gap: 0.25em;
 }
-.app-blog .logos--social a {
-  height: fit-content; /* remove whitespace */
-}
 .app-blog .logos--social svg {
-  display: block; /* remove whitespace */
   height: var(--global-font-size--x-large);
 }
 
