--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.page.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.page.css
@@ -57,20 +57,6 @@ Styleguide Components.DjangoCMS.Blog.App.Page
 
 
 
-/* Metadata */
-
-:--article-page .attrs {
-  display: flex;
-  flex-direction: column;
-}
-:--article-page .date {
-  order: -1;
-}
-
-
-
-
-
 /* Media & Content */
 
 :--article-page :is(.blog-visual, .blog-content) {
